# vibe-trading-system

./: .gitignore  README.md  pyproject.toml
.claude/: launch.json
docs/plans/: 2026-06-09-five-stage-pipeline.md
docs/stages/: 01-research.md  02-discover.md  03-backtest.md  04-viewpoint.md  05-plan.md  06-earnings-data.md  README.md
frontend/: index.html  package-lock.json
frontend/src/: App.tsx
frontend/src/components/: ArtifactBrowser.tsx  PipelineStages.tsx  StageCard.tsx
frontend/src/lib/: api.ts
src/vts/: __init__.py
src/vts/api/: server.py
src/vts/artifacts/: __init__.py  schemas.py  store.py
src/vts/backtest/: __init__.py  engine.py  metrics.py  signals.py
src/vts/cli/: main.py
src/vts/loaders/: __init__.py  earnings_calendar.py  sec_loader.py  yfinance_loader.py
src/vts/orchestrator/: __init__.py  pipeline.py
src/vts/stages/: __init__.py  backtest.py  base.py  discover.py  plan.py  research.py  viewpoint.py
src/vts/sync/: __init__.py
tests/: conftest.py  test_api.py  test_backtest.py  test_discover.py  test_earnings_calendar.py  test_engine.py  test_loader.py  test_pipeline.py  test_plan.py  test_research.py  test_sec_loader.py  test_signals.py  test_store.py  test_viewpoint.py
