[project]
name = "vibe-trading-system"
version = "0.1.0"
description = "Five-stage US equity investment automation pipeline: Research → Discover → Backtest → Viewpoint → Plan"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "jianjustin", email = "janine.jian.chen@gmail.com"},
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "yfinance>=0.2",
    "pydantic>=2.0",
    "click>=8.0",
    "httpx>=0.27",
]

[project.scripts]
vts = "vts.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
